[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-subdex-xcmp'
repository = 'https://github.com/substrate-developer-hub/substrate-pallet-template/'
version = '2.0.0-rc5'


[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.cumulus-upward-message]
git = "https://github.com/paritytech/cumulus"
default-features = false
rev = '96da14c14fb785e106bb89a18c9dedaf2f789d2c'

[dependencies.cumulus-primitives]
git = "https://github.com/paritytech/cumulus"
default-features = false
rev = '96da14c14fb785e106bb89a18c9dedaf2f789d2c'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "rococo-branch"

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "rococo-branch"

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "rococo-branch"

[dependencies.polkadot-parachain]
git = "https://github.com/paritytech/polkadot"
branch = "rococo-branch"
default-features = false

[dependencies.polkadot-core-primitives]
git = "https://github.com/paritytech/polkadot"
branch = "rococo-branch"
default-features = false

[dependencies.polkadot-runtime]
git = "https://github.com/paritytech/polkadot"
branch = "rococo-branch"
default-features = false

[dependencies.rococo-runtime]
git = "https://github.com/paritytech/polkadot"
branch = "rococo-branch"
default-features = false

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.sp-arithmetic]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "rococo-branch"

[dependencies.pallet-subdex]
path = '../pallet-subdex'
default-features = false

[dev-dependencies.cumulus-message-broker]
git = "https://github.com/paritytech/cumulus"
default-features = false
rev = '96da14c14fb785e106bb89a18c9dedaf2f789d2c'

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "rococo-branch"

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "rococo-branch"

[dev-dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "rococo-branch"

[dev-dependencies.pallet-balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "rococo-branch"

[dev-dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "rococo-branch"

[features]
default = ['std']
std = [
    "serde",
    "codec/std",
    "cumulus-upward-message/std",
    "cumulus-primitives/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "polkadot-parachain/std",
]
